2024-03-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.3-alpha01: Sleepover';git push
	git tag -a 5.2.3-alpha01 -m 'Functionally identical to 5.2.2';git push --tags

	* ncremap use vrt_crd as synonym for vrt_nm, not for vrt_fl

	* Add out_fl synonym to --output, --fl_out for symmetry with ncremap

2024-03-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.2: Bambino';git push
	git tag -a 5.2.2 -m 'ncchecker; ncclimo: elm rgn_avg time_bounds; ncremap: xcl level, mbtr --monotonicity';git push --tags

	* Let it be known that ncap2 stopped working correctly with MacOS again today

	* ncchecker tidy manpage, add to homepage, add to nco.texi

2024-03-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.2-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha03: Monkeybaut IPA';git push
	git tag -a 5.2.2-alpha03 -m 'ncchecker RFC #s, tst_lst; ncclimo: elm rgn_avg time_bounds; ncremap: xcl level';git push --tags

	* ncclimo: add "time_bounds" to ELM regional timeseries generated with --rgn_avg

2024-03-20  Charlie Zender  <zender@uci.edu>

	* ncremap: add "level" to exclusion list for vertical interpolation

2024-03-15  Charlie Zender  <zender@uci.edu>

	* Clarify use of $caseid in ncclimo for non-standard filenames

2024-03-07  Charlie Zender  <zender@uci.edu>

	* ncchecker abstract all tests into template that uses info from test definition table

	* ncchecker implement flexible test selection logic

	* Rename diwg_chk to ncchecker

2024-03-05  Charlie Zender  <zender@uci.edu>

	* diwg_chk: Add RFC recommendation numbers, sort tests in that order

	* NCO 5.2.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha02: Broken Molar';git push
	git tag -a 5.2.2-alpha02 -m 'diwg_chk; ncremap: --monotonicity';git push --tags

	* Let it be known that ncap2 started linking correctly with MacOS again today
